add links to other tutorials

--- a/docs/examples/cross-correlation-search.ipynb
+++ b/docs/examples/cross-correlation-search.ipynb
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, load a particle stack on which to run the grid search. The particle stack will be loaded from a STAR file with the `RelionDataset` interface. See the \"Read a particle stack\" tutorial for more information."
+    "Now, load a particle stack on which to run the grid search. The particle stack will be loaded from a STAR file with the `RelionDataset` interface. See the [Read a particle stack](https://mjo22.github.io/cryojax/examples/read-dataset/) tutorial for more information."
    ]
   },
   {
@@ -298,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we have to break up the `imaging_pipeline` into pieces using `equinox.partition`, so that we may smoothly pass through jit/vmap boundaries bfeore recombining pieces using `equinox.combine`. See the \"Simulate a batch of images\" tutorial for an introduction to pytree manipulation with `equinox`."
+    "Now, we have to break up the `imaging_pipeline` into pieces using `equinox.partition`, so that we may smoothly pass through jit/vmap boundaries bfeore recombining pieces using `equinox.combine`. See the [Simulate a batch of images](https://mjo22.github.io/cryojax/examples/simulate-micrograph/) tutorial for an introduction to pytree manipulation with `equinox`."
    ]
   },
   {
