fix a few mistakes in tutorials

--- a/docs/examples/cross-correlation-search.ipynb
+++ b/docs/examples/cross-correlation-search.ipynb
@@ -190,9 +190,9 @@
     ")\n",
     "# ... now the scattering theory\n",
     "transfer_theory = cxs.ContrastTransferTheory(particle_stack.ctf)\n",
-    "projection_method = cxs.FourierSliceExtraction(interpolation_order=1)\n",
+    "potential_integrator = cxs.FourierSliceExtraction(interpolation_order=1)\n",
     "scattering_theory = cxs.LinearScatteringTheory(\n",
-    "    structural_ensemble, projection_method, transfer_theory\n",
+    "    structural_ensemble, potential_integrator, transfer_theory\n",
     ")\n",
     "# ... and finally the imaging pipeline.\n",
     "imaging_pipeline = cxs.ContrastImagingPipeline(\n",
