--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -151,9 +151,7 @@
     "!!! info \"What's with the `out_axes=eqxi.if_mapped(axis=0)`?\"\n",
     "    \n",
     "    When we create a pytree with `eqx.filter_vmap` (or `jax.vmap`), `out_axes` should have the same structure as the output pytree. If `out_axes` is set to `None` at a particular leaf, this\n",
-    "    says that we do not want to broadcast that leaf (of course, this only works for unmapped leaves). By default `jax.vmap` sets `out_axes=0`, so all unmapped leaves get broadcasted. `equinox` allows us to pass `out_axes=eqxi.if_mapped(axes=0)`, which specifies *not* to broadcast pytree leaves unless the leaves are directly mapped.\n",
-    "\n",
-    "    When building a `ContrastImagingPipeline`, it is very important that we do not broadcast arbitrary leaves! For example, an `InstrumentConfig` stores the coordinate systems for our image. Without the `out_axes=eqxi.if_mapped(axes=0)` specification, the `make_imaging_pipeline` would output an `ContrastImagingPipeline.instrument_config` whose coordinate systems have a batch dimension. This takes up unecessary memory."
+    "    says that we do not want to broadcast that leaf (of course, this only works for unmapped leaves). By default `jax.vmap` sets `out_axes=0`, so all unmapped leaves get broadcasted. `equinox` allows us to pass `out_axes=eqxi.if_mapped(axes=0)`, which specifies *not* to broadcast pytree leaves unless the leaves are directly mapped."
    ]
   },
   {
