document change in convention for incoming PR

--- a/docs/examples/cross-correlation-search.ipynb
+++ b/docs/examples/cross-correlation-search.ipynb
@@ -52,7 +52,7 @@
     "First, load the template. This template happens to be generated from cisTEM.\n",
     "\n",
     "!!! note \n",
-    "    The cisTEM scattering potential has been modified slightly because at the time of writing this, `cryojax` scattering potentials have different conventions than `cisTEM`'s. In particular, the `cisTEM` scattering potential was multiplied by a factor of $1/(\\textrm{voxel size} \\times \\textrm{wavelength})$."
+    "    The cisTEM scattering potential has been modified slightly because at the time of writing this, `cryojax` scattering potentials have different conventions than `cisTEM`'s. In particular, the `cisTEM` scattering potential was multiplied by a factor of $4 \\pi /(\\textrm{voxel size} \\times \\textrm{wavelength})$."
    ]
   },
   {
