--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, build the *scattering theory*. The simplest `scattering_theory` is the `LinearScatteringTheory`. This represents the usual image formation pipeline in cryo-EM, which forms images by integrating the potential and convolving the result with a contrast transfer function."
+    "Next, build the *scattering theory*. The simplest `scattering_theory` is the `WeakPhaseScatteringTheory`. This represents the usual image formation pipeline in cryo-EM, which forms images by integrating the potential and convolving the result with a contrast transfer function."
    ]
   },
   {
@@ -128,7 +128,7 @@
     "    variance=op.Lorenzian(amplitude=0.005**2, length_scale=2.0 * potential.voxel_size)\n",
     ")\n",
     "# ... now for the scattering theory\n",
-    "scattering_theory = cxs.LinearScatteringTheory(\n",
+    "scattering_theory = cxs.WeakPhaseScatteringTheory(\n",
     "    structural_ensemble, potential_integrator, transfer_theory, solvent\n",
     ")"
    ]
