--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -138,7 +138,7 @@
     "    # ... build the ensemble\n",
     "    structural_ensemble = cxs.SingleStructureEnsemble(potential, pose)\n",
     "    # ... and finally the scattering theory and return\n",
-    "    theory = cxs.LinearScatteringTheory(\n",
+    "    theory = cxs.WeakPhaseScatteringTheory(\n",
     "        structural_ensemble, potential_integrator, transfer_theory\n",
     "    )\n",
     "    return cxs.ContrastImagingPipeline(config, theory)"
