doc change for incoming PR

--- a/docs/examples/cross-correlation-search.ipynb
+++ b/docs/examples/cross-correlation-search.ipynb
@@ -192,7 +192,7 @@
     "# ... now the scattering theory\n",
     "transfer_theory = cxs.ContrastTransferTheory(particle_stack.ctf)\n",
     "potential_integrator = cxs.FourierSliceExtraction(interpolation_order=1)\n",
-    "scattering_theory = cxs.LinearScatteringTheory(\n",
+    "scattering_theory = cxs.WeakPhaseScatteringTheory(\n",
     "    structural_ensemble, potential_integrator, transfer_theory\n",
     ")\n",
     "# ... and finally the imaging pipeline.\n",
