old parameter name

--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -309,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we can directly control image SNR through the parameters `distribution.contrast_scale` (a phenomenological scale factor for the underlying signal) and `distribution.variance_function` (a function that computes the variance, or power spectrum, of the gaussian noise).\n",
+    "Here, we can directly control image SNR through the parameters `distribution.signal_scale_factor` (a phenomenological scale factor for the underlying signal) and `distribution.variance_function` (a function that computes the variance, or power spectrum, of the gaussian noise).\n",
     "\n",
     "Notice that in order to simulate the image with additive white noise, we chose the power spectrum to be a constant. In particular, we set `variance_function = op.Constant(1.0)`. We can instead use the `cryojax.image.operators` module to build a more complex power spectrum. In this example, we choose the variance to be a lorenzian envelope modulated by the CTF, plus additive white noise."
    ]
