bring back cryojax.io, its more clear. shift some things around for clarity before merge

--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -293,7 +293,7 @@
     "# ... and the cartesian coordinate system\n",
     "pixel_size = relion_particle.instrument_config.pixel_size\n",
     "frequency_grid_in_angstroms = (\n",
-    "    relion_particle.instrument_config.wrapped_frequency_grid_in_angstroms.get()\n",
+    "    relion_particle.instrument_config.frequency_grid_in_angstroms\n",
     ")\n",
     "# ... now, compute a radial coordinate system\n",
     "radial_frequency_grid_in_angstroms = jnp.linalg.norm(frequency_grid_in_angstroms, axis=-1)\n",
