--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cryojax.data import read_array_with_spacing_from_mrc\n",
+    "from cryojax.io import read_array_with_spacing_from_mrc\n",
     "\n",
     "\n",
     "# Scattering potential stored in MRC format\n",
