--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "with install_import_hook(\"cryojax\", \"typeguard.typechecked\"):\n",
     "    import cryojax.simulator as cxs\n",
-    "    from cryojax.data import read_array_with_spacing_from_mrc\n",
+    "    from cryojax.io import read_array_with_spacing_from_mrc\n",
     "    from cryojax.rotations import SO3"
    ]
   },
