refer to new tutorial in documentation

--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -99,6 +99,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To see how the array stored in `filename` was written, see the documentation [here](https://mjo22.github.io/cryojax/examples/compute-potential/).\n",
+    "\n",
     "Next, build the *scattering theory*. The simplest `scattering_theory` is the `WeakPhaseScatteringTheory`. This represents the usual image formation pipeline in cryo-EM, which forms images by integrating the potential and convolving the result with a contrast transfer function."
    ]
   },
