docs formatting error

--- a/docs/examples/compute-potential.ipynb
+++ b/docs/examples/compute-potential.ipynb
@@ -151,8 +151,7 @@
    "source": [
     "Now, let's validate that what we see is reasonable. In order to do this, we will first compute a few different projections of the potential.\n",
     "\n",
-    "!!! info \n",
-    "\n",
+    "!!! info\n",
     "    In, `cryojax`, potentials are built in units of *inverse length squared*,\n",
     "    $[L]^{-2}$. This rescaled potential is defined to be\n",
     "\n",
@@ -237,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also inspect a different viewing angle by rotating the `voxel_potential` to a different pose. This involves instantiating a `cryojax` representation of a pose. Here, we choose the `cryojax.simulator.EulerAnglePose`, which allows us to tune the three euler angles:\n",
+    "We can also inspect a different viewing angle by rotating the `voxel_potential` to a different pose. This involves instantiating a `cryojax` representation of a pose. Here we choose the `cryojax.simulator.EulerAnglePose`, which allows us to tune the three euler angles:\n",
     "\n",
     "- The first euler angle $\\phi$, denoted `view_phi`\n",
     "- The second euler angle $\\theta$, denoted `view_theta`\n",
