cleaner API for loading b factors

--- a/docs/examples/compute-potential.ipynb
+++ b/docs/examples/compute-potential.ipynb
@@ -79,7 +79,7 @@
     "- The `atom_positions` are the positions of the atoms in angstroms.\n",
     "- The `scattering_factor_a`, and `scattering_factor_b` are the parameters $a_i$ and $b_i$ from Peng et al. (1996). \n",
     "\n",
-    "Optionally, we can also load PDB B-factors into the `b_factors` field after loading them with the function `cryojax.io.read_atoms_with_b_factors_from_pdb`."
+    "Optionally, we can also load PDB B-factors into the `b_factors` field after making the function call `cryojax.io.read_atoms_from_pdb(..., get_b_factors=True)`."
    ]
   },
   {
