polish the docs and tutorial

--- a/docs/examples/compute-potential.ipynb
+++ b/docs/examples/compute-potential.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "This tutorial demonstrates how to use `cryojax` to build a scattering potential from a PDB entry. Specifically, the tutorial will build a voxel grid, take some steps to validate it, then save the result to be used in subsequent tutorials.\n",
     "\n",
-    "The scattering potential will be built using the tabulation of atomic scattering factors from the work of Lian-Mao Peng, which fits the potential from single atoms to a sum of five gaussians. See the `cryojax` documentation for more information.\n",
+    "The scattering potential will be built using the tabulation of atomic scattering factors from the work of Lian-Mao Peng, which fits the potential from single atoms to a sum of five gaussians. See the `cryojax` documentation [here](https://mjo22.github.io/cryojax/examples/compute-potential/) for more information.\n",
     "\n",
     "*References:*\n",
     "\n",
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we will downsample the voxel array to our working voxel size. Because the potentials from individual atoms are short-ranged, finite sampling effects can be significant and it is best to first generate a potential at a smaller-than-desired voxel size. "
+    "Now, downsample the voxel array to the desired voxel size. Because the potentials from individual atoms are short-ranged, finite sampling effects can be significant and it is best to first generate a potential at a smaller-than-desired voxel size. "
    ]
   },
   {
@@ -149,8 +149,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's validate that what we see is reasonable. In order to do this, we will first compute a few different projections of the potential.\n",
-    "\n",
     "!!! info\n",
     "    In, `cryojax`, potentials are built in units of *inverse length squared*,\n",
     "    $[L]^{-2}$. This rescaled potential is defined to be\n",
@@ -163,9 +161,11 @@
     "    In the following, we will compute projections of the potential, which we will\n",
     "    define to be\n",
     "\n",
-    "    $$U_z(x, y) = \\int dz \\ U(x, y, z).$$\n",
+    "    $$U_z(x, y) = \\int_{-\\infty}^z dz \\ U(x, y, z),$$\n",
     "\n",
-    "    In practice, we will compute this integral with fourier slice extraction."
+    "    where in practice the integration domain is taken to be between $z$-planes above and below where the potential has sufficiently decayed. In this tutorial, this integral is computed with fourier slice extraction.\n",
+    "\n",
+    "Now, let's validate that what we see is reasonable. In order to do this, we will first compute a few different projections of the potential."
    ]
   },
   {
@@ -236,13 +236,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also inspect a different viewing angle by rotating the `voxel_potential` to a different pose. This involves instantiating a `cryojax` representation of a pose. Here we choose the `cryojax.simulator.EulerAnglePose`, which allows us to tune the three euler angles:\n",
+    "We can also inspect a different viewing angle by rotating the `voxel_potential` to a different pose. This involves instantiating a `cryojax` representation of a pose, which here is the `cryojax.simulator.EulerAnglePose`. The three euler angles in this object are:\n",
     "\n",
     "- The first euler angle $\\phi$, denoted `view_phi`\n",
     "- The second euler angle $\\theta$, denoted `view_theta`\n",
     "- The third euler angle $\\psi$, denoted `view_psi`\n",
     "\n",
-    "Rotation conventions in `cryojax` follow other standard cryo-EM software, such as RELION and cisTEM. In particular, the euler angle convention is a zyz extrinsic rotation."
+    "The euler angle convention in `cryojax` is a zyz extrinsic rotation, which follows other standard cryo-EM software, such as RELION and cisTEM."
    ]
   },
   {
@@ -274,6 +274,7 @@
    ],
    "source": [
     "# Instantiate the pose and rotate the potential\n",
+    "# ... angles are in degrees\n",
     "pose = cxs.EulerAnglePose(view_phi=0.0, view_theta=90.0, view_psi=90.0)\n",
     "rotated_voxel_potential = voxel_potential.rotate_to_pose(pose)\n",
     "# ... again compute the projection integral\n",
