--- a/docs/examples/cross-correlation-search.ipynb
+++ b/docs/examples/cross-correlation-search.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cryojax.data import read_array_with_spacing_from_mrc\n",
+    "from cryojax.io import read_array_with_spacing_from_mrc\n",
     "\n",
     "\n",
     "# First, load the template. This template happens to be generated from cisTEM\n",
