fix link in docs

--- a/docs/examples/compute-potential.ipynb
+++ b/docs/examples/compute-potential.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "This tutorial demonstrates how to use `cryojax` to build a scattering potential from a PDB entry. Specifically, the tutorial will build a voxel grid, take some steps to validate it, then save the result to be used in subsequent tutorials.\n",
     "\n",
-    "The scattering potential will be built using the tabulation of atomic scattering factors from the work of Lian-Mao Peng, which fits the potential from single atoms to a sum of five gaussians. See the `cryojax` documentation [here](https://mjo22.github.io/cryojax/examples/compute-potential/) for more information.\n",
+    "The scattering potential will be built using the tabulation of atomic scattering factors from the work of Lian-Mao Peng, which fits the potential from single atoms to a sum of five gaussians. See the `cryojax` documentation [here](https://mjo22.github.io/cryojax/api/simulator/scattering_potential/#atom-based-scattering-potentials) for more information.\n",
     "\n",
     "*References:*\n",
     "\n",
