factor of 4 when adding B factors is not right I think. improve docs

--- a/docs/examples/compute-potential.ipynb
+++ b/docs/examples/compute-potential.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, load the atomic positions and identities from a PDB entry. Here, we use a structure of GroEL (PDB ID 5w0s). This is loaded into a `PengAtomicPotential` object, which represents the potential for individual atoms as a sum of five gaussians."
+    "First, load the atomic positions and identities from a PDB entry. Here, a structure of GroEL (PDB ID 5w0s) is used. This is loaded into a `PengAtomicPotential` object."
    ]
   },
   {
@@ -161,11 +161,11 @@
     "    In the following, we will compute projections of the potential, which we will\n",
     "    define to be\n",
     "\n",
-    "    $$U_z(x, y) = \\int_{-\\infty}^z dz \\ U(x, y, z),$$\n",
+    "    $$U_z(x, y) = \\int_{-\\infty}^z dz' \\ U(x, y, z'),$$\n",
     "\n",
     "    where in practice the integration domain is taken to be between $z$-planes above and below where the potential has sufficiently decayed. In this tutorial, this integral is computed with fourier slice extraction.\n",
     "\n",
-    "Now, let's validate that what we see is reasonable. In order to do this, we will first compute a few different projections of the potential."
+    "Now, let's validate that what we see is reasonable. The first validation step is to compute a few different projections of the potential."
    ]
   },
   {
@@ -288,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another good sanity check is to make sure the potential is relatively weak compared to a typical incident electron beam energy in cryo-EM. For an electron beam with incident wavenumber $k$, this can be checked with the condition\n",
+    "Another good sanity check is to check that the potential is relatively weak compared to a typical incident electron beam energy in cryo-EM. For an electron beam with incident wavenumber $k$, this can be checked with the condition\n",
     "\n",
     "$$U/k^2 << 1,$$\n",
     "\n",
