fix a bug introduced in PR #216 when loading scattering factor parameters

--- a/docs/examples/compute-potential.ipynb
+++ b/docs/examples/compute-potential.ipynb
@@ -155,7 +155,7 @@
     "\n",
     "    $$U(x, y, z) = \\frac{2 m e}{\\hbar^2} V(x, y, z),$$\n",
     "\n",
-    "    where $V$ is the electrostatic potential energy, $(x, y, z)$ are a positional\n",
+    "    where $V$ is the electrostatic potential energy, $(x, y, z)$ are positional\n",
     "    coordinates, $m$ is the electron mass, and $e$ is the electron charge.\n",
     "\n",
     "    In the following, we will compute projections of the potential, which we will\n",
@@ -163,7 +163,7 @@
     "\n",
     "    $$U_z(x, y) = \\int_{-\\infty}^z dz' \\ U(x, y, z'),$$\n",
     "\n",
-    "    where in practice the integration domain is taken to be between $z$-planes above and below where the potential has sufficiently decayed. In this tutorial, this integral is computed with fourier slice extraction.\n",
+    "    where in practice the integration domain is taken to be between $z'$-planes above and below where the potential has sufficiently decayed. In this tutorial, this integral is computed with fourier slice extraction.\n",
     "\n",
     "Now, let's validate that what we see is reasonable. The first validation step is to compute a few different projections of the potential."
    ]
