more clear naming

--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -129,7 +129,9 @@
     "# strength to be a fraction of the integrated specimen potential\n",
     "strength = 0.05 * real_voxel_grid.sum(axis=0).max() * voxel_size\n",
     "solvent = cxs.GaussianIce(\n",
-    "    variance=op.Lorenzian(amplitude=strength**2, length_scale=2.0 * potential.voxel_size)\n",
+    "    variance_function=op.Lorenzian(\n",
+    "        amplitude=strength**2, length_scale=2.0 * potential.voxel_size\n",
+    "    )\n",
     ")\n",
     "# ... now for the scattering theory\n",
     "scattering_theory = cxs.WeakPhaseScatteringTheory(\n",
