make n_batches required

--- a/docs/examples/compute-potential.ipynb
+++ b/docs/examples/compute-potential.ipynb
@@ -96,9 +96,9 @@
    "outputs": [],
    "source": [
     "# Evaluate the potential on a voxel grid\n",
-    "shape = (60, 60, 60)\n",
-    "voxel_size = 4.0\n",
-    "real_voxel_grid = atom_potential.as_real_voxel_grid(shape, voxel_size, batch_size=60)"
+    "shape = (480, 480, 480)\n",
+    "voxel_size = 0.5\n",
+    "real_voxel_grid = atom_potential.as_real_voxel_grid(shape, voxel_size, n_batches=100)"
    ]
   },
   {
@@ -110,14 +110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from cryojax.image import downsample_with_fourier_cropping\n",
     "\n",
     "\n",
-    "downsampling_factor = 1\n",
+    "downsampling_factor = 6\n",
     "downsampled_voxel_size = downsampling_factor * voxel_size\n",
     "downsampled_voxel_grid = downsample_with_fourier_cropping(\n",
     "    real_voxel_grid, downsampling_factor\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,6 @@
     "    downsampled_voxel_grid,\n",
     "    downsampled_voxel_size,\n",
     "    \"./data/groel_5w0s_scattering_potential.mrc\",\n",
-    "    overwrite=True,\n",
     ")"
    ]
   }
