compute a plane at a time

--- a/docs/examples/compute-potential.ipynb
+++ b/docs/examples/compute-potential.ipynb
@@ -96,9 +96,9 @@
    "outputs": [],
    "source": [
     "# Evaluate the potential on a voxel grid\n",
-    "shape = (480, 480, 480)\n",
+    "shape = (1, 480, 480)\n",
     "voxel_size = 0.5\n",
-    "real_voxel_grid = atom_potential.as_real_voxel_grid(shape, voxel_size, n_batches=100)"
+    "real_voxel_grid = atom_potential.as_real_voxel_grid(shape, voxel_size)"
    ]
   },
   {
