miscellaneous grid search improvements

--- a/docs/examples/cross-correlation-search.ipynb
+++ b/docs/examples/cross-correlation-search.ipynb
@@ -452,7 +452,7 @@
     "    pipeline_tree_grid,\n",
     "    args=(per_particle_pipeline, non_per_particle_pipeline, fourier_image_stack),\n",
     "    progress_bar=True,\n",
-    "    print_every=n_iterations // 20,\n",
+    "    total_progress_bar_updates=20,\n",
     ")"
    ]
   },
