convert back to standard FFT convention

--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -354,13 +354,14 @@
     "\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
+    "n_pixels = relion_particle.instrument_config.n_pixels\n",
     "spectrum, frequencies = compute_radially_averaged_powerspectrum(\n",
     "    fourier_image,\n",
     "    radial_frequency_grid_in_angstroms,\n",
     "    pixel_size,\n",
     "    maximum_frequency=1 / (2 * pixel_size),\n",
     ")\n",
-    "ax.plot(frequencies, spectrum, color=\"k\")\n",
+    "ax.plot(frequencies, spectrum / n_pixels, color=\"k\")\n",
     "ax.set(\n",
     "    xlabel=\"frequency magnitude $[\\AA^{-1}]$\",\n",
     "    ylabel=\"radially averaged power spectrum\",\n",
@@ -392,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
