add option to normalize signal in IndependentGaussianFourierModes distribution

--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -263,8 +263,6 @@
     }
    ],
    "source": [
-    "import jax.numpy as jnp\n",
-    "\n",
     "from cryojax.image import operators as op\n",
     "from cryojax.inference import distributions as dist\n",
     "\n",
@@ -286,8 +284,9 @@
     "# Passing the ImagePipeline and a variance function, instantiate the distribution\n",
     "distribution = dist.IndependentGaussianFourierModes(\n",
     "    imaging_pipeline,\n",
-    "    signal_scale_factor=jnp.sqrt(instrument_config.n_pixels),\n",
+    "    signal_scale_factor=1.0,\n",
     "    variance_function=op.Constant(1.0),\n",
+    "    is_signal_normalized=True,\n",
     ")\n",
     "# ... then, either simulate an image from this distribution\n",
     "key = jax.random.PRNGKey(seed=0)\n",
@@ -341,8 +340,9 @@
     "# Passing the ImagePipeline and a variance function, instantiate the distribution\n",
     "non_white_noise_distribution = dist.IndependentGaussianFourierModes(\n",
     "    imaging_pipeline,\n",
-    "    signal_scale_factor=jnp.sqrt(instrument_config.n_pixels),\n",
+    "    signal_scale_factor=1.0,\n",
     "    variance_function=variance_function,\n",
+    "    is_signal_normalized=True,\n",
     ")\n",
     "# ... then, either simulate an image from this distribution\n",
     "key = jax.random.PRNGKey(seed=0)\n",
