notebooks with old code

--- a/docs/examples/multislice.ipynb
+++ b/docs/examples/multislice.ipynb
@@ -9,7 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,16 +91,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x154f75333580>"
+       "<matplotlib.image.AxesImage at 0x154f70c3a140>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -121,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,16 +147,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x154f4b247d90>"
+       "<matplotlib.colorbar.Colorbar at 0x154f70b835b0>"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -168,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +263,7 @@
        " 'y_dim']"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,16 +274,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x154f4b3ab8e0>"
+       "<matplotlib.colorbar.Colorbar at 0x154f708bbd30>"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -296,18 +306,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "from typing_extensions import override\n",
     "\n",
     "from jaxtyping import Array, Complex\n",
@@ -361,7 +363,8 @@
     "            )\n",
     "        exit_wave = plane_wave_ns[-1]  # TODO: return fourier space\n",
     "\n",
-    "        return exit_wave"
+    "        return exit_wave\n",
+    "````"
    ]
   },
   {
@@ -421,7 +424,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cryojax.experimental import MultisliceIntegrator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +460,7 @@
        "        0.999947  -0.01031355j, 0.99994695-0.01030332j]], dtype=complex64)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,16 +525,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x154f4afdb490>"
+       "<matplotlib.colorbar.Colorbar at 0x154f705ee4d0>"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -541,6 +553,13 @@
     "plt.imshow(image, cmap=\"gray\")\n",
     "plt.colorbar()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
