fix args to integrator in notebook

--- a/docs/examples/multislice.ipynb
+++ b/docs/examples/multislice.ipynb
@@ -118,7 +118,7 @@
    ],
    "source": [
     "multislice_integrator = FFTMultisliceIntegrator(\n",
-    "    n_slices_per_step=2, z_planes_in_parallel=10\n",
+    "    slice_thickness_in_voxels=2, options_for_rasterization=dict(z_planes_in_parallel=10)\n",
     ")\n",
     "\n",
     "# exit_wave = multislice_integrator.compute_wavefunction_at_exit_plane(\n",
